# python3-repoman

./: README.md  pyproject.toml  repomanager.py  setup.py
debian/: changelog  control  copyright  rules
repoman/: _configManager.py  _repoFile.py  _repoScrapper.py  errorcode.py  manager.py  repomanager.py
src/repoman/: repomanager.py
